Massieve refactorizatie, werkende aan predicaten